--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     </div>
 
     {% include footer.html %}
-
+    <script id="dsq-count-scr" src="//https-donghyunkims-github-io.disqus.com/count.js" async></script>
   </body>
 
 </html>
