--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -118,6 +118,7 @@ layout: default
 	</section>
 {% endif %}
 
+{% if site.disqus_shortname %}
 <section class="disqus">
   <div id="disqus_thread"></div>
   <script type="text/javascript">
@@ -133,6 +134,7 @@ layout: default
   <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 </section>
+{% endif %}
 
 </div>
 </div>
