--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,13 +21,14 @@ layout: default
     {{ page.date | date: "%B %-d, %Y" }}
   </div>
   <div class="post-categories">
-  {% if page.categories.size > 0 %}in {% for cat in page.categories %}
-    {% if site.jekyll-archives %}
-    <a href="{{ site.baseurl }}/category/{{ cat }}">{{ cat | capitalize }}</a>{% if forloop.last == false %}, {% endif %}
-    {% else %}
-    <a href="{{ site.baseurl }}/posts/#{{ cat }}">{{ cat | capitalize }}</a>{% if forloop.last == false %}, {% endif %}
-    {% endif %}
-  {% endfor %}{% endif %}
+      {% if page.categories.size > 0 %}in
+        {% for cat in page.categories %}
+          <a href="{{ site.baseurl }}/category/{{ cat }}">{{ cat | capitalize }}</a>
+          {% if forloop.last == false %}, {% endif %}
+        {% endfor %}
+      {% else %}
+        in <a href="{{ site.baseurl }}/posts">Post</a>
+      {% endif %}
   </div>
 </section>
 
@@ -35,12 +36,10 @@ layout: default
   {{ content }}
 </article>
 
-{% if site.jekyll-archives %}
 {% if page.tags.size > 0 %}
 <section class="tags">
   <strong>Tags:</strong> {% for tag in page.tags %}<a href="{{ site.baseurl }}/tag/{{ tag }}">{{ tag }}</a>{% if forloop.last == false %},&nbsp;{% endif %}{% endfor %}
 </section>
-{% endif %}
 {% endif %}
 
 <section class="rss">
